--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -5,3 +5,5 @@ allow-licenses:
   - BSD-2-Clause
   - BSD-3-Clause
   - ISC
+  - (Apache-2.0 OR MIT) AND BSD-3-Clause
+  - (MIT OR Apache-2.0) AND Unicode-DFS-2016
