Add Python and BSD 2/3 licenses
Signed-off-by: Bradley Reynolds <bradley.reynolds@impressdesigns.com>

--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -7,3 +7,5 @@ allow-licenses:
   - ISC
   - (Apache-2.0 OR MIT) AND BSD-3-Clause
   - (MIT OR Apache-2.0) AND Unicode-DFS-2016
+  - BSD-2-Clause AND BSD-3-Clause
+  - Python-2.0.1
