--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -10,6 +10,7 @@ allow-licenses:
   - BSD-2-Clause AND BSD-3-Clause
   - Python-2.0.1
   - LGPL-3.0
+  - GPL-3.0-or-later AND LGPL-2.1-only
   - CAL-1.0
   - Apache-2.0 AND LGPL-3.0-or-later AND MIT
   - Apache-2.0 AND LGPL-3.0-or-later
