--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -8,6 +8,7 @@ allow-licenses:
   - (Apache-2.0 OR MIT) AND BSD-3-Clause
   - (MIT OR Apache-2.0) AND Unicode-DFS-2016
   - BSD-2-Clause AND BSD-3-Clause
+  - Python-2.0
   - Python-2.0.1
   - LGPL-3.0
   - GPL-3.0-or-later AND LGPL-2.1-only
