Allow combo licenses
Signed-off-by: Bradley Reynolds <bradley.reynolds@impressdesigns.com>

--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -16,3 +16,6 @@ allow-licenses:
   - Apache-2.0 AND LGPL-3.0-or-later AND MIT
   - Apache-2.0 AND LGPL-3.0-or-later
   - Unlicense
+  - GPL-2.0-only AND GPL-3.0-or-later AND LGPL-2.1-only AND MPL-1.1	 # pyphen
+  - GPL-3.0 AND GPL-3.0-only AND GPL-3.0-or-later AND LGPL-3.0-only	 # pyxlsb
+  - HPND  # Pillow
