--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -11,7 +11,7 @@ allow-licenses:
   - Python-2.0
   - Python-2.0.1
   - LGPL-3.0
-  - GPL-3.0-or-later AND LGPL-2.1-only
+  - LGPL-2.0-only AND LGPL-2.1-or-later # astroid
   - CAL-1.0
   - Apache-2.0 AND LGPL-3.0-or-later AND MIT
   - Apache-2.0 AND LGPL-3.0-or-later
