Add MPL-2.0 and 0BSD licenses
Terms look good
https://choosealicense.com/licenses/0bsd/
https://choosealicense.com/licenses/mpl-2.0/

Signed-off-by: Bradley Reynolds <bradley.reynolds@impressdesigns.com>

--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -19,3 +19,5 @@ allow-licenses:
   - GPL-2.0-only AND GPL-3.0-or-later AND LGPL-2.1-only AND MPL-1.1	 # pyphen
   - GPL-3.0 AND GPL-3.0-only AND GPL-3.0-or-later AND LGPL-3.0-only	 # pyxlsb
   - HPND  # Pillow
+  - MPL-2.0
+  - 0BSD
