--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -18,7 +18,7 @@ allow-licenses:
   - Unlicense
   - GPL-2.0-only AND GPL-3.0-or-later AND LGPL-2.1-only AND MPL-1.1	 # pyphen
   - GPL-3.0 AND GPL-3.0-only AND GPL-3.0-or-later AND LGPL-3.0-only	 # pyxlsb
-  - HPND  # Pillow
+  - CAL-1.0 AND HPND  # Pillow
   - MPL-2.0
   - 0BSD
   - BSD-2-Clause AND MIT
