--- a/.github/dependency-review-config.yaml
+++ b/.github/dependency-review-config.yaml
@@ -22,3 +22,4 @@ allow-licenses:
   - MPL-2.0
   - 0BSD
   - BSD-2-Clause AND MIT
+  - Apache-2.0 AND BSD-3-Clause AND MIT AND OFL-1.1	 # fonttools, MIT declared in setup.py
